--- a/index.html
+++ b/index.html
@@ -23,16 +23,8 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 .card { border:1px solid #ddd; border-radius:14px; padding:10px; margin-bottom:12px; }
 .card img { width:100%; border-radius:10px; }
 
-.row { display:flex; justify-content:space-between; align-items:center; gap:6px; }
-
-.notice {
-  background:#fff3cd;
-  border:1px solid #ffeeba;
-  padding:10px;
-  border-radius:10px;
-  font-size:14px;
-  margin-bottom:12px;
-}
+.row { display:flex; align-items:center; gap:6px; }
+.row strong { flex:1; }
 </style>
 </head>
 
@@ -41,12 +33,8 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 
 <header>
   <h3>🧶 手混線</h3>
-  <button onclick="showCart()">🛒</button>
+  <button type="button" onclick="showCart()">🛒</button>
 </header>
-
-<div id="lineNotice" class="notice hidden">
-  LINE 內建瀏覽器無法使用購物車功能，請點右上角「⋯」→ 在瀏覽器中開啟
-</div>
 
 <!-- 首頁 -->
 <div id="home">
@@ -56,19 +44,19 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 
   <div class="yarns">
 
-    <label class="yarn" data-name="奶茶燕麥 米色">
+    <label class="yarn" data-name="奶茶燕麥">
       <input type="checkbox" value="A">
       <img src="images/A.jpg">
       <div>奶茶燕麥</div>
     </label>
 
-    <label class="yarn" data-name="霧藍海鹽 藍色">
+    <label class="yarn" data-name="霧藍海鹽">
       <input type="checkbox" value="B">
       <img src="images/B.jpg">
       <div>霧藍海鹽</div>
     </label>
 
-    <label class="yarn" data-name="森林橄欖 綠色">
+    <label class="yarn" data-name="森林橄欖">
       <input type="checkbox" value="C">
       <img src="images/C.jpg">
       <div>森林橄欖</div>
@@ -76,7 +64,7 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 
   </div>
 
-  <button class="primary" onclick="makePreview()">產生混線預覽</button>
+  <button type="button" class="primary" onclick="makePreview()">產生混線預覽</button>
 </div>
 
 <!-- 預覽 -->
@@ -84,44 +72,27 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
   <img id="mixImg">
   <p id="mixInfo"></p>
 
-  <button class="primary" onclick="handleAdd()">加入購物車</button>
-  <button class="secondary" onclick="backHome()">回首頁</button>
+  <button type="button" class="primary" onclick="addToCart()">加入購物車</button>
+  <button type="button" class="secondary" onclick="backHome()">回首頁</button>
 </div>
 
 <!-- 購物車 -->
 <div id="cart" class="hidden">
   <h3>購物車</h3>
   <div id="cartList"></div>
-  <button class="secondary" onclick="backHome()">回首頁</button>
+  <button type="button" class="secondary" onclick="backHome()">回首頁</button>
 </div>
 
 </div>
 
 <script>
-/* ===== LINE 偵測 ===== */
-const isLine = navigator.userAgent.includes("Line");
-if (isLine) {
-  document.getElementById("lineNotice").classList.remove("hidden");
-}
-
-/* ===== localStorage ===== */
-function getCart() {
-  return JSON.parse(localStorage.getItem("cart") || "[]");
-}
-function saveCart(cart) {
-  localStorage.setItem("cart", JSON.stringify(cart));
-}
-
-/* ===== 狀態 ===== */
 let currentKey = "";
 let currentSelected = [];
 
-/* ===== 功能 ===== */
 function filterYarns() {
   const k = search.value.toLowerCase();
   document.querySelectorAll(".yarn").forEach(y => {
-    y.style.display = y.dataset.name.toLowerCase().includes(k)
-      ? "block" : "none";
+    y.style.display = y.dataset.name.toLowerCase().includes(k) ? "block" : "none";
   });
 }
 
@@ -137,6 +108,7 @@ function makePreview() {
 
   currentSelected = selected;
   currentKey = "MIX-" + selected.join("-");
+
   mixImg.src = `images/mix/${selected.join("-")}.jpg`;
   mixInfo.innerText = currentKey;
 
@@ -150,49 +122,35 @@ function backHome() {
   home.classList.remove("hidden");
 }
 
-function handleAdd() {
-  if (isLine) {
-    alert("請用 Safari / Chrome 開啟本頁才能使用購物車");
-    return;
-  }
-  addToCart();
-}
-
 function addToCart() {
-  const cart = getCart();
-  cart.push({ key: currentKey, combo: [...currentSelected] });
-  saveCart(cart);
+  const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+  cart.push({
+    key: currentKey,
+    combo: currentSelected
+  });
+  localStorage.setItem("cart", JSON.stringify(cart));
   alert("已加入購物車");
 }
 
 function showCart() {
-  if (isLine) {
-    alert("LINE 內建瀏覽器無法使用購物車，請改用瀏覽器開啟");
-    return;
-  }
-
   home.classList.add("hidden");
   preview.classList.add("hidden");
   cart.classList.remove("hidden");
 
   cartList.innerHTML = "";
-  const cartData = getCart();
-
-  if (!cartData.length) {
-    cartList.innerHTML = "<p>購物車是空的</p>";
-    return;
-  }
+  const cartData = JSON.parse(localStorage.getItem("cart") || "[]");
 
   cartData.forEach((item, i) => {
     const div = document.createElement("div");
     div.className = "card";
     div.innerHTML = `
       <div class="row">
+        <input type="checkbox">
         <strong>${item.key}</strong>
-        <button onclick="copyCode('${item.key}')">📋</button>
+        <button type="button" onclick="copyCode('${item.key}')">📋</button>
       </div>
       <img src="images/mix/${item.combo.join("-")}.jpg">
-      <button onclick="edit(${i})">✏️ 修改配色</button>
+      <button type="button" onclick="edit(${i})">修改配色</button>
     `;
     cartList.appendChild(div);
   });
@@ -203,11 +161,14 @@ function copyCode(text) {
 }
 
 function edit(index) {
-  const item = getCart()[index];
+  const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+  const item = cart[index];
+
   document.querySelectorAll("input[type=checkbox]").forEach(c => c.checked = false);
   item.combo.forEach(v => {
     document.querySelector(`input[value="${v}"]`).checked = true;
   });
+
   backHome();
 }
 </script>
