--- a/index.html
+++ b/index.html
@@ -7,24 +7,47 @@
 
 <style>
 body { font-family:sans-serif; background:#f5f1ea; padding:16px; }
-.app { max-width:420px; margin:auto; background:#fff; border-radius:20px; padding:16px; }
+.app { max-width:800px; width:100%; margin:auto; background:#fff; border-radius:20px; padding:16px; transition: all 0.3s ease; }
 header { display:flex; justify-content:space-between; align-items:center; }
 
-.yarns { display:grid; grid-template-columns:repeat(3,1fr); gap:12px; margin-top:12px; }
-.yarn { border:2px solid #eee; border-radius:12px; padding:6px; text-align:center; }
+.yarns { display:grid; grid-template-columns:repeat(auto-fit, minmax(100px,1fr)); gap:12px; margin-top:12px; }
+.yarn { border:2px solid #eee; border-radius:12px; padding:6px; text-align:center; transition: transform 0.2s; }
+.yarn:hover { transform: scale(1.05); }
 .yarn img { width:100%; border-radius:8px; }
 
-button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:12px; font-size:16px; cursor:pointer; }
+button { padding:10px 14px; border-radius:12px; border:none; font-size:16px; cursor:pointer; transition: all 0.2s; }
+button:hover { opacity:0.8; }
 .primary { background:#ff8f66; color:#fff; }
 .secondary { background:#444; color:#fff; }
 
-.hidden { display:none; }
+.hidden { display:none; opacity:0; transition: opacity 0.3s; }
+.show { display:block; opacity:1; }
 
-.card { border:1px solid #ddd; border-radius:14px; padding:10px; margin-bottom:12px; }
+.card { border:1px solid #ddd; border-radius:14px; padding:10px; margin-bottom:12px; transition: all 0.3s; }
 .card img { width:100%; border-radius:10px; }
 
 .row { display:flex; align-items:center; gap:6px; }
 .row strong { flex:1; }
+
+/* toast 提示 */
+#toast {
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background:#444;
+  color:#fff;
+  padding:12px 20px;
+  border-radius:12px;
+  opacity:0;
+  transition: opacity 0.5s;
+  z-index:1000;
+}
+#toast.show { opacity:1; }
+
+@media (min-width:600px){
+  .yarns { grid-template-columns:repeat(3,1fr); }
+}
 </style>
 </head>
 
@@ -37,31 +60,29 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 </header>
 
 <!-- 首頁 -->
-<div id="home">
-  <input id="search" placeholder="搜尋線材"
+<div id="home" class="show">
+  <input id="search" placeholder="搜尋線材或顏色"
     oninput="filterYarns()"
     style="width:100%;padding:10px;border-radius:10px;border:1px solid #ddd;">
 
   <div class="yarns">
-
-    <label class="yarn" data-name="奶茶燕麥">
+    <label class="yarn" data-name="奶茶燕麥" data-color="beige">
       <input type="checkbox" value="A">
       <img src="images/A.jpg">
       <div>奶茶燕麥</div>
     </label>
 
-    <label class="yarn" data-name="霧藍海鹽">
+    <label class="yarn" data-name="霧藍海鹽" data-color="blue">
       <input type="checkbox" value="B">
       <img src="images/B.jpg">
       <div>霧藍海鹽</div>
     </label>
 
-    <label class="yarn" data-name="森林橄欖">
+    <label class="yarn" data-name="森林橄欖" data-color="green">
       <input type="checkbox" value="C">
       <img src="images/C.jpg">
       <div>森林橄欖</div>
     </label>
-
   </div>
 
   <button type="button" class="primary" onclick="makePreview()">產生混線預覽</button>
@@ -78,9 +99,18 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 
 <!-- 購物車 -->
 <div id="cart" class="hidden">
-  <h3>購物車</h3>
+  <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
+    <h3>購物車</h3>
+    <div>
+      <button class="secondary" onclick="clearCart()">清空購物車</button>
+      <button class="secondary" onclick="deleteSelected()">刪除選取</button>
+    </div>
+  </div>
   <div id="cartList"></div>
 </div>
+
+<!-- toast 提示 -->
+<div id="toast"></div>
 
 </div>
 
@@ -88,79 +118,80 @@ button { width:100%; padding:14px; border-radius:12px; border:none; margin-top:1
 let currentKey = "";
 let currentSelected = [];
 
+// toast 提示
+function showToast(msg){
+  const t = document.getElementById("toast");
+  t.innerText = msg;
+  t.classList.add("show");
+  setTimeout(()=>t.classList.remove("show"),1500);
+}
+
 // 搜尋過濾
 function filterYarns() {
   const k = search.value.toLowerCase();
   document.querySelectorAll(".yarn").forEach(y => {
-    y.style.display = y.dataset.name.toLowerCase().includes(k) ? "block" : "none";
+    const name = y.dataset.name.toLowerCase();
+    const color = y.dataset.color.toLowerCase();
+    y.style.display = (name.includes(k) || color.includes(k)) ? "block" : "none";
   });
 }
 
-// 產生混線預覽
+// 預覽
 function makePreview() {
-  const selected = [...document.querySelectorAll("input:checked")]
-    .map(i => i.value)
-    .sort();
-
-  if (!selected.length) {
-    alert("請至少選一種線材");
-    return;
-  }
-
+  const selected = [...document.querySelectorAll("#home input:checked")].map(i=>i.value).sort();
+  if(!selected.length){ showToast("請至少選一種線材"); return; }
   currentSelected = selected;
-  currentKey = "MIX-" + selected.join("-");
-
-  mixImg.src = `images/mix/${selected.join("-")}.jpg`;
-  mixImg.onerror = () => { mixImg.src = "images/placeholder.jpg"; };
-  mixInfo.innerText = currentKey;
-
-  home.classList.add("hidden");
-  preview.classList.remove("hidden");
+  currentKey = "MIX-"+selected.join("-");
+  mixImg.src=`images/mix/${selected.join("-")}.jpg`;
+  mixImg.onerror=()=>{ mixImg.src="images/placeholder.jpg"; };
+  mixInfo.innerText=currentKey;
+  home.classList.replace("show","hidden");
+  preview.classList.replace("hidden","show");
 }
 
 // 回首頁
-function backHome() {
-  preview.classList.add("hidden");
-  cart.classList.add("hidden");
-  home.classList.remove("hidden");
+function backHome(){
+  preview.classList.replace("show","hidden");
+  cart.classList.replace("show","hidden");
+  home.classList.replace("hidden","show");
 }
 
-// 更新購物車數量
-function updateCartCount() {
-  const cartData = JSON.parse(localStorage.getItem("cart") || "[]");
-  document.getElementById("cartBtn").innerText = `🛒 ${cartData.length}`;
+// 購物車數量
+function updateCartCount(){
+  const cartData = JSON.parse(localStorage.getItem("cart")||"[]");
+  document.getElementById("cartBtn").innerText=`🛒 ${cartData.length}`;
 }
 
 // 加入購物車
-function addToCart() {
-  const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-
-  // 避免重複加入
-  if (!cart.some(item => item.key === currentKey)) {
-    cart.push({ key: currentKey, combo: currentSelected });
-    localStorage.setItem("cart", JSON.stringify(cart));
+function addToCart(){
+  const cart = JSON.parse(localStorage.getItem("cart")||"[]");
+  if(!cart.some(item=>item.key===currentKey)){
+    cart.push({ key:currentKey, combo:currentSelected, timestamp:Date.now() });
+    localStorage.setItem("cart",JSON.stringify(cart));
     updateCartCount();
-    alert("已加入購物車");
-  } else {
-    alert("此配色已在購物車中");
-  }
+    showToast("已加入購物車");
+  }else showToast("此配色已在購物車中");
 }
 
 // 顯示購物車
-function showCart() {
-  home.classList.add("hidden");
-  preview.classList.add("hidden");
-  cart.classList.remove("hidden");
+function showCart(){
+  home.classList.replace("show","hidden");
+  preview.classList.replace("show","hidden");
+  cart.classList.replace("hidden","show");
+  renderCart();
+}
 
-  cartList.innerHTML = "";
-  const cartData = JSON.parse(localStorage.getItem("cart") || "[]");
-
-  cartData.forEach((item, i) => {
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `
+// 渲染購物車列表
+function renderCart(){
+  const cartData = JSON.parse(localStorage.getItem("cart")||"[]").sort((a,b)=>b.timestamp-a.timestamp);
+  const cartList = document.getElementById("cartList");
+  cartList.innerHTML="";
+  cartData.forEach((item,i)=>{
+    const div=document.createElement("div");
+    div.className="card";
+    div.innerHTML=`
       <div class="row">
-        <input type="checkbox">
+        <input type="checkbox" data-index="${i}">
         <strong>${item.key}</strong>
         <button type="button" onclick="copyCode('${item.key}')">📋</button>
       </div>
@@ -169,38 +200,40 @@ function showCart() {
     `;
     cartList.appendChild(div);
   });
-
-  // 清空購物車按鈕
-  const clearBtn = document.createElement("button");
-  clearBtn.className = "secondary";
-  clearBtn.innerText = "清空購物車";
-  clearBtn.onclick = () => {
-    if (confirm("確定要清空購物車嗎？")) {
-      localStorage.removeItem("cart");
-      cartList.innerHTML = "";
-      updateCartCount();
-    }
-  };
-  cartList.appendChild(clearBtn);
 }
 
 // 複製代碼
-function copyCode(text) {
-  navigator.clipboard.writeText(text);
-  alert("已複製代碼：" + text);
-}
+function copyCode(text){ navigator.clipboard.writeText(text); showToast("已複製代碼："+text); }
 
 // 編輯配色
-function edit(index) {
-  const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+function edit(index){
+  const cart = JSON.parse(localStorage.getItem("cart")||"[]");
   const item = cart[index];
-
-  document.querySelectorAll("input[type=checkbox]").forEach(c => c.checked = false);
-  item.combo.forEach(v => {
-    document.querySelector(`input[value="${v}"]`).checked = true;
-  });
-
+  document.querySelectorAll("#home input[type=checkbox]").forEach(c=>c.checked=false);
+  item.combo.forEach(v=>document.querySelector(`#home input[value="${v}"]`).checked=true);
   backHome();
+}
+
+// 清空購物車
+function clearCart(){
+  if(confirm("確定要清空購物車嗎？")){
+    localStorage.removeItem("cart");
+    renderCart();
+    updateCartCount();
+    showToast("購物車已清空");
+  }
+}
+
+// 批量刪除
+function deleteSelected(){
+  const cart = JSON.parse(localStorage.getItem("cart")||"[]");
+  const checked = [...document.querySelectorAll("#cartList input[type=checkbox]:checked")].map(c=>parseInt(c.dataset.index));
+  if(!checked.length){ showToast("請選擇要刪除的項目"); return; }
+  const newCart = cart.filter((_,i)=>!checked.includes(i));
+  localStorage.setItem("cart",JSON.stringify(newCart));
+  renderCart();
+  updateCartCount();
+  showToast("已刪除選取項目");
 }
 
 // 初始化購物車數量
