--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@ button:hover { opacity:0.8; }
   transition: opacity 0.5s;
   z-index:1000;
 }
-#toast.show { opacity:1; }
 
 /* 下方預覽區 */
 #previewContainer { margin-top:20px; border-top:1px solid #ddd; padding-top:12px; }
@@ -64,7 +63,7 @@ button:hover { opacity:0.8; }
 </header>
 
 <!-- 首頁線材選擇 -->
-<div id="home">
+<div id="home" class="show">
   <input id="search" placeholder="搜尋線材或顏色"
     oninput="filterYarns()"
     style="width:100%;padding:10px;border-radius:10px;border:1px solid #ddd;">
@@ -168,13 +167,25 @@ function updateCartCount(){
 // 加入購物車
 function addToCart(){
   const cart = JSON.parse(localStorage.getItem("cart")||"[]");
+
   if(!cart.some(item=>item.key===currentKey)){
     cart.push({ key:currentKey, combo:currentSelected, timestamp:Date.now() });
     localStorage.setItem("cart",JSON.stringify(cart));
     updateCartCount();
     showToast("已加入購物車");
-  }else showToast("此配色已在購物車中");
+  }else{
+    showToast("此配色已在購物車中");
+  }
+
+  // 隱藏預覽區
   cancelPreview();
+
+  // 清空首頁勾選
+  document.querySelectorAll("#home input[type=checkbox]").forEach(c=>c.checked=false);
+
+  // 清空當前選擇記錄
+  currentSelected = [];
+  currentKey = "";
 }
 
 // 顯示購物車
