--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ body { font-family:sans-serif; background:#f5f1ea; padding:16px; }
 header { display:flex; justify-content:space-between; align-items:center; margin-bottom:12px; }
 
 .yarns { display:grid; grid-template-columns:repeat(auto-fit, minmax(100px,1fr)); gap:12px; margin-top:12px; }
-.yarn { border:2px solid #eee; border-radius:12px; padding:6px; text-align:center; transition: transform 0.2s; }
+.yarn { border:2px solid #eee; border-radius:12px; padding:6px; text-align:center; transition: transform 0.2s, border 0.2s; }
 .yarn:hover { transform: scale(1.05); }
+.yarn.selected { border-color:#ff8f66; }
 .yarn img { width:100%; border-radius:8px; }
 
 button { padding:10px 14px; border-radius:12px; border:none; font-size:16px; cursor:pointer; transition: all 0.2s; }
@@ -59,16 +60,22 @@ button:hover { opacity:0.8; }
   opacity: 1;
 }
 
-#previewContainer img {
-  width:auto;
-  max-width:250px;
-  max-height:200px;
-  border-radius:12px;
-  margin-bottom:8px;
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
+/* 多縮圖滑動 */
+#previewSlider {
+  display:flex; 
+  overflow-x:auto; 
+  gap:8px; 
+  padding:8px;
 }
+#previewSlider img {
+  width:120px; 
+  height:80px; 
+  border-radius:8px; 
+  cursor:pointer; 
+  transition: transform 0.2s, border 0.2s; 
+  border:2px solid #eee;
+}
+#previewSlider img.selected { border-color:#ff8f66; transform:scale(1.05); }
 
 @media (min-width:600px){
   .yarns { grid-template-columns:repeat(3,1fr); }
@@ -114,9 +121,9 @@ button:hover { opacity:0.8; }
 
 <!-- 下方預覽區 -->
 <div id="previewContainer" class="hidden">
-  <img id="mixImg">
+  <div id="previewSlider"></div>
   <p id="mixInfo"></p>
-  <div style="display:flex; gap:8px; justify-content:center;">
+  <div style="display:flex; gap:8px; justify-content:center; margin-top:8px;">
     <button type="button" class="primary" onclick="addToCart()">加入購物車</button>
     <button type="button" class="secondary" onclick="cancelPreview()">取消</button>
   </div>
@@ -141,9 +148,9 @@ button:hover { opacity:0.8; }
 <script>
 let currentKey = "";
 let currentSelected = [];
-let savedSelection = []; // 暫存勾選
+let savedSelection = []; 
 
-// toast 提示
+// toast
 function showToast(msg){
   const t = document.getElementById("toast");
   t.innerText = msg;
@@ -152,7 +159,7 @@ function showToast(msg){
   setTimeout(()=>t.style.opacity=0,1500);
 }
 
-// 搜尋過濾
+// filter
 function filterYarns() {
   const k = search.value.toLowerCase();
   document.querySelectorAll(".yarn").forEach(y => {
@@ -163,75 +170,94 @@ function filterYarns() {
 }
 
 // 顯示下方預覽
-function showPreview(){
-  const selected = [...document.querySelectorAll("#home input:checked")].map(i=>i.value).sort();
+function showPreview() {
+  const selected = [...document.querySelectorAll("#home input:checked")].map(i => i.value).sort();
   if(!selected.length){ showToast("請至少選一種線材"); return; }
-  currentSelected = selected;
+
+  currentSelected = [...selected];
+  savedSelection = [...selected];
   currentKey = "MIX-"+selected.join("-");
-  savedSelection = [...selected]; // 暫存勾選
-  const mixImg = document.getElementById("mixImg");
-  mixImg.src=`images/mix/${selected.join("-")}.jpg`;
-  mixImg.onerror=()=>{ mixImg.src="images/placeholder.jpg"; };
+
+  const slider = document.getElementById("previewSlider");
+  slider.innerHTML="";
+
+  const img = document.createElement("img");
+  img.src=`images/mix/${selected.join("-")}.jpg`;
+  img.onerror=()=>{ img.src="images/placeholder.jpg"; showToast("該混線圖片不存在"); };
+  img.classList.add("selected");
+  slider.appendChild(img);
+
   document.getElementById("mixInfo").innerText=currentKey;
 
-  const preview = document.getElementById("previewContainer");
+  // 高亮勾選
+  document.querySelectorAll(".yarn").forEach(y=>{
+    const input = y.querySelector("input");
+    if(input.checked) y.classList.add("selected");
+    else y.classList.remove("selected");
+  });
+
+  const preview=document.getElementById("previewContainer");
   preview.classList.remove("hidden");
-  setTimeout(()=>preview.classList.add("show"),50); // 觸發動畫
+  setTimeout(()=>preview.classList.add("show"),50);
 }
 
-// 取消預覽（保留勾選）
+// 取消
 function cancelPreview(){
-  const preview = document.getElementById("previewContainer");
+  const preview=document.getElementById("previewContainer");
   preview.classList.remove("show");
-  setTimeout(()=>preview.classList.add("hidden"),400);
-  currentSelected = [...savedSelection];
-}
+  preview.addEventListener('transitionend',()=>{ preview.classList.add("hidden"); }, {once:true});
+  currentSelected=[...savedSelection];
 
-// 購物車數量
-function updateCartCount(){
-  const cartData = JSON.parse(localStorage.getItem("cart")||"[]");
-  document.getElementById("cartBtn").innerText=`🛒 ${cartData.length}`;
+  document.querySelectorAll(".yarn").forEach(y=>y.classList.remove("selected"));
 }
 
 // 加入購物車
 function addToCart(){
-  const cart = JSON.parse(localStorage.getItem("cart")||"[]");
+  const cart=JSON.parse(localStorage.getItem("cart")||"[]");
   if(!cart.some(item=>item.key===currentKey)){
-    cart.push({ key:currentKey, combo:currentSelected, timestamp:Date.now() });
+    cart.push({key:currentKey, combo:[...currentSelected], timestamp:Date.now()});
     localStorage.setItem("cart",JSON.stringify(cart));
     updateCartCount();
     showToast("已加入購物車");
-  }else showToast("此配色已在購物車中");
+  } else showToast("此配色已在購物車中");
 
-  const preview = document.getElementById("previewContainer");
+  const preview=document.getElementById("previewContainer");
   preview.classList.remove("show");
-  setTimeout(()=>preview.classList.add("hidden"),400);
+  preview.addEventListener('transitionend',()=>{ preview.classList.add("hidden"); }, {once:true});
 
-  // 加入購物車後清空首頁勾選
   document.querySelectorAll("#home input[type=checkbox]").forEach(c=>c.checked=false);
-  currentSelected = [];
-  currentKey = "";
+  currentSelected=[];
+  currentKey="";
+  document.querySelectorAll(".yarn").forEach(y=>y.classList.remove("selected"));
 }
 
-// 顯示購物車
+// 高亮即時
+document.querySelectorAll(".yarn input").forEach(inp=>{
+  inp.addEventListener("change",()=>{
+    if(inp.checked) inp.closest(".yarn").classList.add("selected");
+    else inp.closest(".yarn").classList.remove("selected");
+  });
+});
+
+// 購物車
+function updateCartCount(){
+  const cartData=JSON.parse(localStorage.getItem("cart")||"[]");
+  document.getElementById("cartBtn").innerText=`🛒 ${cartData.length}`;
+}
 function showCart(){
   document.getElementById("home").classList.replace("show","hidden");
   document.getElementById("previewContainer").classList.replace("show","hidden");
   document.getElementById("cart").classList.replace("hidden","show");
   renderCart();
 }
-
-// 回首頁
 function backHome(){
   document.getElementById("home").classList.replace("hidden","show");
   document.getElementById("previewContainer").classList.replace("show","hidden");
   document.getElementById("cart").classList.replace("show","hidden");
 }
-
-// 渲染購物車
 function renderCart(){
-  const cartData = JSON.parse(localStorage.getItem("cart")||"[]").sort((a,b)=>b.timestamp-a.timestamp);
-  const cartList = document.getElementById("cartList");
+  const cartData=JSON.parse(localStorage.getItem("cart")||"[]").sort((a,b)=>b.timestamp-a.timestamp);
+  const cartList=document.getElementById("cartList");
   cartList.innerHTML="";
   cartData.forEach((item,i)=>{
     const div=document.createElement("div");
@@ -248,21 +274,15 @@ function renderCart(){
     cartList.appendChild(div);
   });
 }
-
-// 複製代碼
 function copyCode(text){ navigator.clipboard.writeText(text); showToast("已複製代碼："+text); }
-
-// 編輯
 function edit(index){
-  const cart = JSON.parse(localStorage.getItem("cart")||"[]");
-  const item = cart[index];
+  const cart=JSON.parse(localStorage.getItem("cart")||"[]");
+  const item=cart[index];
   document.querySelectorAll("#home input[type=checkbox]").forEach(c=>c.checked=false);
   item.combo.forEach(v=>document.querySelector(`#home input[value="${v}"]`).checked=true);
   cancelPreview();
   document.getElementById("home").classList.replace("hidden","show");
 }
-
-// 清空購物車
 function clearCart(){
   if(confirm("確定要清空購物車嗎？")){
     localStorage.removeItem("cart");
@@ -271,13 +291,11 @@ function clearCart(){
     showToast("購物車已清空");
   }
 }
-
-// 批量刪除
 function deleteSelected(){
-  const cart = JSON.parse(localStorage.getItem("cart")||"[]");
-  const checked = [...document.querySelectorAll("#cartList input[type=checkbox]:checked")].map(c=>parseInt(c.dataset.index));
+  const cart=JSON.parse(localStorage.getItem("cart")||"[]");
+  const checked=[...document.querySelectorAll("#cartList input[type=checkbox]:checked")].map(c=>parseInt(c.dataset.index));
   if(!checked.length){ showToast("請選擇要刪除的項目"); return; }
-  const newCart = cart.filter((_,i)=>!checked.includes(i));
+  const newCart=cart.filter((_,i)=>!checked.includes(i));
   localStorage.setItem("cart",JSON.stringify(newCart));
   renderCart();
   updateCartCount();
@@ -286,6 +304,5 @@ function deleteSelected(){
 
 updateCartCount();
 </script>
-
 </body>
 </html>
